--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,12 @@
                 <h1>VTSD Exchange</h1>
                 <p>The exchanging of vtsd items</p>
             </div>
+            <a href="#" class="btn btn-success" style="float: right">Sign In</a>
+            <div class="bg-success" style="float: right">
+                <input type="text" value="Email" size="7">
+                <input type="text" value="Password" size="7">
+            </div>
+
         </div>
     </div>
 
@@ -24,25 +30,27 @@
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <div class="row-2 bg-success">search</div>
+                            <div class="row-2">
+                                    <input type="text" value="Search" size="15">
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 2</a>
+                            <a class="nav-link" href="#">Walnut Ridge</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 3</a>
+                            <a class="nav-link" href="#">Rolling Hills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 2</a>
+                            <a class="nav-link" href="#">Cedar Mountain</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 3</a>
+                            <a class="nav-link" href="#">Lounsberry</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 2</a>
+                            <a class="nav-link" href="#">Glen Meadow</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link 3</a>
+                            <a class="nav-link" href="#">Highschool</a>
                         </li>
                         <li class="nav-item">
                             <div class="row-2 bg-success">footer</div>
@@ -54,8 +62,18 @@
         </div>
         <div class="col bg-warning">
             <div class="container bg-danger">
-                My middle stuff here
+                <div class="dropdown">
+                    <button class="dropbtn">Dropdown <i class="fa fa-caret-down"></i></button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
 
+
+            </div>
+                </div>
             </div>
         </div>
 
