--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>VTSD Exchange</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
 
@@ -11,11 +12,11 @@
     <div class="row">
         <div class="col bg-primary">
             <div class="mt-4 p-3 bg-primary text-white">
-                <h1>VTSD Exchange</h1>
-                <p>The exchanging of vtsd items</p>
+                <h1><img src="images/4741.png" height="75px"/>TSD Exchange</h1>
+                <p>A place to exchange different item inside the Vernon Township School District</p>
             </div>
-            <a href="#" class="btn btn-success" style="float: right">Sign In</a>
-            <div class="bg-success" style="float: right">
+            <a href="#" class="btn btn-warning" style="float: right">Sign In</a>
+            <div style="float: right">
                 <input type="text" value="Email" size="7">
                 <input type="text" value="Password" size="7">
             </div>
@@ -24,14 +25,14 @@
     </div>
 
     <div class="row">
-        <div class="col-2 bg-success">
+        <div class="col-2 bg-warning">
 
             <nav class="navbar bg-light">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="row-2">
-                                    <input type="text" value="Search" size="15">
+                                <input type="text" value="Search" size="15">
                             </div>
                         </li>
                         <li class="nav-item">
@@ -52,34 +53,166 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Highschool</a>
                         </li>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+                        </br>
+
                         <li class="nav-item">
-                            <div class="row-2 bg-success">footer</div>
+                            <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.</div>
                         </li>
                     </ul>
                 </div>
             </nav>
 
         </div>
-        <div class="col bg-warning">
-            <div class="container bg-danger">
-                <div class="dropdown">
-                    <button class="dropbtn">Dropdown <i class="fa fa-caret-down"></i></button>
-                    <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
+
+        <div class="col">
+            <div class="row">
+                <div class="col">
+                    <div class="container bg-ligh t">
+                        <nav class="navbar navbar-expand-sm bg-light">
+                            <div class="container-fluid">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                           data-bs-toggle="dropdown">Supplies</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Writing Utensils</a></li>
+                                            <li><a class="dropdown-item" href="#">Paper</a></li>
+                                            <li><a class="dropdown-item" href="#">Etc. Board Items</a></li>
+                                            <li><a class="dropdown-item" href="#">Misc. Supplies</a></li>
+                                            <li><a class="dropdown-item" href="#">Musical Items</a></li>
+                                            <li><a class="dropdown-item" href="#">Cleaning Supplies</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                           data-bs-toggle="dropdown">Electronics</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Calculators</a></li>
+                                            <li><a class="dropdown-item" href="#">Cords</a></li>
+                                            <li><a class="dropdown-item" href="#">Computers</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button"
+                                           data-bs-toggle="dropdown">Furniture</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a class="dropdown-item" href="#">Chairs</a></li>
+                                            <li><a class="dropdown-item" href="#">Desks</a></li>
+                                            <li><a class="dropdown-item" href="#">Shelves</a></li>
+                                            <li><a class="dropdown-item" href="#">Comfort Furniture</a></li>
+                                            <li><a class="dropdown-item" href="#">Shelves</a></li>
+                                            <li><a class="dropdown-item" href="#">Decorations</a></li>
+
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
                     </div>
                 </div>
-
-
             </div>
+            <div class="row">
+                <div class="col">
+                    <div class="container  mt-3">
+                        <h1 class="display-6">Recently Posted:</h1>
+                    </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                <div class="card" style="width:200px">
+                    <img class="card-img-top" src="images/add.png" alt="Card image">
+                    <div class="card-body">
+                        <h4 class="card-title">*Item*</h4>
+                        <a href="#" class="btn btn-primary">See Item Listing</a>
+                    </div>
+                </div>
+            </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="#" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
         </div>
-
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
