--- a/glenMeadow.html
+++ b/glenMeadow.html
@@ -121,8 +121,11 @@
                                             <li><a class="dropdown-item" href="#">Comfort Furniture</a></li>
                                             <li><a class="dropdown-item" href="#">Shelves</a></li>
                                             <li><a class="dropdown-item" href="#">Decorations</a></li>
-
+                                            <div>
+                                                <a href="index.html" class="btn btn-primary" style="float: right">X</a>
+                                            </div>
                                         </ul>
+
                                     </li>
                                 </ul>
                             </div>
@@ -133,7 +136,7 @@
             <div class="row">
                 <div class="col">
                     <div class="container  mt-3">
-                        <h1 class="display-6">Recently Posted:</h1>
+                        <h1 class="display-6">Glen Meadow Listings:</h1>
                     </div>
                 </div>
             </div>
@@ -148,71 +151,71 @@
                     </div>
                 </div>
                 <div class="col">
-                <div class="card" style="width:200px">
-                    <img class="card-img-top" src="images/add.png" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">*Item*</h4>
-                        <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card" style="width:200px">
+                        <img class="card-img-top" src="images/add.png" alt="Card image">
+                        <div class="card-body">
+                            <h4 class="card-title">*Item*</h4>
+                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
+                        </div>
                     </div>
                 </div>
             </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
         </div>
     </div>
-</div>
 
 </div>
 </div>
