--- a/itemPage.html
+++ b/itemPage.html
@@ -36,22 +36,22 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Walnut Ridge</a>
+                            <a class="nav-link" href="walnutRidge.html">Walnut Ridge</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Rolling Hills</a>
+                            <a class="nav-link" href="rollingHills.html">Rolling Hills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Cedar Mountain</a>
+                            <a class="nav-link" href="cedarMountain.html">Cedar Mountain</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Lounsberry</a>
+                            <a class="nav-link" href="lounsberry.html">Lounsberry</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Glen Meadow</a>
+                            <a class="nav-link" href="glenMeadow.html">Glen Meadow</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Highschool</a>
+                            <a class="nav-link" href="vths.html">Highschool</a>
                         </li>
                         </br>
                         </br>
@@ -90,10 +90,13 @@
                                 <img src="images/add.png" height="700px"/>
                             </div>
                             <div class="col">
+                                <div>
+                                    <a href="index.html" class="btn btn-primary" style="float: right">X</a>
+                                </div>
                                 <p class="h4">*Item listing*</p>
                                 </br>
                                 <p class="h6">*ADD ITEM INFO*</p>
-                                <p class="h6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus
                                     elementum facilisis rhoncus. Nam nec ullamcorper orci, id scelerisque ex. Vestibulum non
                                     convallis urna, eu convallis ante. Maecenas nec turpis et est rhoncus venenatis eu quis dui. M
                                     orbi sit amet nisl luctus eros scelerisque molestie at vel felis. Aliquam condimentum augue lore
@@ -104,6 +107,9 @@
                                 </br>
                                 <p class="h6">*ADD ITEM LOCATION*</p>
                                 <p>*item* is located at *add school*</p>
+                                <div>
+                                    <a href="#" class="btn btn-warning">Contact Seller</a>
+                                </div>
 
                 </div>
             </div>
