--- a/cedarMountain.html
+++ b/cedarMountain.html
@@ -70,12 +70,12 @@
                         </br>
                         </br>
                         </br>
-                        </br>
-                        </br>
-                        </br>
+
 
                         <li class="nav-item">
-                            <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.</div>
+                            <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.
+                                <a href="conUs.html">Contact Us!</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -121,12 +121,11 @@
                                             <li><a class="dropdown-item" href="#">Comfort Furniture</a></li>
                                             <li><a class="dropdown-item" href="#">Shelves</a></li>
                                             <li><a class="dropdown-item" href="#">Decorations</a></li>
-                                            <div>
-                                                <a href="index.html" class="btn btn-primary" style="float: right">X</a>
-                                            </div>
                                         </ul>
-
                                     </li>
+                                    <div>
+                                        <a href="index.html" class="btn btn-primary" style="float: right">X</a>
+                                    </div>
                                 </ul>
                             </div>
                         </nav>
