--- a/conUs.html
+++ b/conUs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>VTSD Exchange</title>
@@ -120,11 +120,9 @@
                                             <li><a class="dropdown-item" href="#">Comfort Furniture</a></li>
                                             <li><a class="dropdown-item" href="#">Shelves</a></li>
                                             <li><a class="dropdown-item" href="#">Decorations</a></li>
+
                                         </ul>
                                     </li>
-                                    <div>
-                                        <a href="index.html" class="btn btn-primary" style="float: right">X</a>
-                                    </div>
                                 </ul>
                             </div>
                         </nav>
@@ -134,83 +132,42 @@
             <div class="row">
                 <div class="col">
                     <div class="container  mt-3">
-                        <h1 class="display-6">VTHS Listings:</h1>
+                        <h1 class="display-6">Contact Us!</h1>
+                        </br>
+                        <p>
+                            <h5>Find Us</h5>
+                            Vernon Township School District </br>
+                            625 Route 517</br>
+                            Vernon, NJ 07462</br>
+                            973-764-2900</br>
+                        </p>
+
+                        <table class="table table-border table-hover" style="width: 32%">
+                            <tbody>
+                            <tr>
+                                <td><input type="text" value="First Name" size="15">
+                                    <input type="text" value="Last Name" size="15">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><input type="text" value="Phone Number" size="15">
+                                <input type="text" value="Email" size="15"></td.
+                            </tr>
+                            <tr>
+                                <td>
+                                    <textarea rows="4" cols="39">
+                                        Reason for Concern?
+                                    </textarea>
+                                </td>
+
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card" style="width:200px">
-                        <img class="card-img-top" src="images/add.png" alt="Card image">
-                        <div class="card-body">
-                            <h4 class="card-title">*Item*</h4>
-                            <a href="itemPage.html" class="btn btn-primary">See Item Listing</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
