--- a/itemPage.html
+++ b/itemPage.html
@@ -64,12 +64,10 @@
                         </br>
                         </br>
                         </br>
-                        </br>
-                        </br>
-                        </br>
 
                         <li class="nav-item">
                             <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.
+                                <a href="conUs.html">Contact Us!</a>
                             </div>
                         </li>
                     </ul>
