--- a/Index.html
+++ b/Index.html
@@ -70,12 +70,11 @@
                         </br>
                         </br>
                         </br>
-                        </br>
-                        </br>
-                        </br>
 
                         <li class="nav-item">
-                            <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.</div>
+                            <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.
+                                <a href="conUs.html">Contact Us!</a>
+                            </div>
                         </li>
                     </ul>
                 </div>
