--- a/conUs.html
+++ b/conUs.html
@@ -17,8 +17,8 @@
             </div>
             <a href="#" class="btn btn-warning" style="float: right">Sign In</a>
             <div style="float: right">
-                <input type="text" value="Email" size="7">
-                <input type="text" value="Password" size="7">
+                <input class="form-control" type="text" placeholder="Email">
+                <input class="form-control" type="text" placeholder="Password">
             </div>
 
         </div>
@@ -32,7 +32,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="row-2">
-                                <input type="text" value="Search" size="15">
+                                <input class="form-control" type="text" placeholder="Search">
                             </div>
                         </li>
                         </br>
@@ -123,6 +123,9 @@
 
                                         </ul>
                                     </li>
+                                    <div>
+                                        <a href="index.html" class="btn btn-primary" style="float: right">X</a>
+                                    </div>
                                 </ul>
                             </div>
                         </nav>
@@ -135,44 +138,50 @@
                         <h1 class="display-6">Contact Us!</h1>
                         </br>
                         <p>
-                            <h5>Find Us</h5>
-                            Vernon Township School District </br>
-                            625 Route 517</br>
-                            Vernon, NJ 07462</br>
-                            973-764-2900</br>
+                        <h5>Find Us</h5>
+                        Vernon Township School District </br>
+                        625 Route 517</br>
+                        Vernon, NJ 07462</br>
+                        973-764-2900</br>
                         </p>
-
-                        <table class="table table-border table-hover" style="width: 32%">
-                            <tbody>
-                            <tr>
-                                <td><input type="text" value="First Name" size="15">
-                                    <input type="text" value="Last Name" size="15">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td><input type="text" value="Phone Number" size="15">
-                                <input type="text" value="Email" size="15"></td.
-                            </tr>
-                            <tr>
-                                <td>
-                                    <textarea rows="4" cols="39">
-                                        Reason for Concern?
-                                    </textarea>
-                                </td>
-
-                            </tr>
-                            </tbody>
-                        </table>
+                    </div>
+                    <div class="container">
+                        <div class="col">
+                            <form method="GET" action="#">
+                                <div class="row">
+                                    <div class="col-2">
+                                        <input class="form-control" type="text" placeholder="First">
+                                    </div>
+                                    <div class="col-2">
+                                        <input class="form-control" type="text" placeholder="Last">
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2">
+                                        <input class="form-control" type="text" placeholder="Email">
+                                    </div>
+                                    <div class="col-2">
+                                        <input class="form-control" type="text" placeholder="Phone Number">
+                                    </div>
+                                </div>
+                            </form>
+                            </br>
+                            <div class="col-4">
+                                <textarea class="form-control" placeholder="Reason for Concern?"></textarea>
+                            </div>
+                            </br>
+                            <div class="col-1">
+                                <a href="#" class="btn btn-warning">Submit</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="row">
+
 
             </div>
         </div>
-    </div>
 
-</div>
+    </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
