--- a/rollingHills.html
+++ b/rollingHills.html
@@ -17,8 +17,8 @@
             </div>
             <a href="#" class="btn btn-warning" style="float: right">Sign In</a>
             <div style="float: right">
-                <input type="text" value="Email" size="7">
-                <input type="text" value="Password" size="7">
+                <input class="form-control" type="text" placeholder="Email">
+                <input class="form-control" type="text" placeholder="Password">
             </div>
 
         </div>
@@ -32,7 +32,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <div class="row-2">
-                                <input type="text" value="Search" size="15">
+                                <input class="form-control" type="text" placeholder="Search">
                             </div>
                         </li>
                         </br>
