--- a/cedarMountain.html
+++ b/cedarMountain.html
@@ -59,20 +59,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="vths.html">Highschool</a>
                         </li>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
 
-
-                        <li class="nav-item">
+                        <li class="nav-item" style="vertical-align: text-bottom">
                             <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.
                                 <a href="conUs.html">Contact Us!</a>
                             </div>
