--- a/conUs.html
+++ b/conUs.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>VTSD Exchange</title>
@@ -59,19 +59,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="vths.html">Highschool</a>
                         </li>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
 
-                        <li class="nav-item">
+
+                        <li class="nav-item" style="vertical-align: text-bottom">
                             <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.
                                 <a href="conUs.html">Contact Us!</a>
                             </div>
@@ -85,7 +75,7 @@
         <div class="col">
             <div class="row">
                 <div class="col">
-                    <div class="container bg-ligh t">
+                    <div class="container bg-light">
                         <nav class="navbar navbar-expand-sm bg-light">
                             <div class="container-fluid">
                                 <ul class="navbar-nav">
@@ -176,12 +166,10 @@
                         </div>
                     </div>
                 </div>
-
-
             </div>
         </div>
-
     </div>
+
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
