--- a/itemPage.html
+++ b/itemPage.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-2 bg-warning">
 
-            <nav class="navbar bg-light">
+            <nav class="navbar bg-light extendCol" style="height:100%; vertical-align: top;">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -52,19 +52,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="vths.html">Highschool</a>
                         </li>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
-                        </br>
 
-                        <li class="nav-item">
+                        <li class="nav-item" style="vertical-align: text-bottom">
                             <div class="row-2">Copyright © 2023 Vernon Township School District . All rights reserved.
                                 <a href="conUs.html">Contact Us!</a>
                             </div>
