--- a/itemPage.html
+++ b/itemPage.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-2 bg-warning">
 
-            <nav class="navbar bg-light extendCol" style="height:100%; vertical-align: top;">
+            <nav class="navbar bg-light extendCol">
                 <div class="container-fluid">
                     <ul class="navbar-nav">
                         <li class="nav-item">
